MDEV-32957 Unusable key notes report wrong predicates for > and >=

The function scalar_comparison_op_to_lex_cstring() returned
wrong operator names for SCALAR_CMP_GE and SCALAR_CMP_GT.